<resources>
    <string name="Account">Account</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="No_Account">No Account? Click Register</string>
    <string name="Forget_password">Forget password</string>
    <string name="Repeat_password">Repeat password</string>
    <string name="Call_phone_number">Call-phone number</string>
    <string name="Email">E-mail</string>
    <string name="Submit">Submit</string>
    <string name="Update">Update</string>
    <string name="download_now">Pro, a new version faster download now!</string>
    <string name="OK">OK</string>
    <string name="Loading">Loading...</string>
    <string name="Account_empty">Account can\'t be empty!</string>
    <string name="Password_empty">Password can\'t be empty</string>
    <string name="SportBook">SPORT</string>
    <string name="Live_Casino">Live Casino</string>
    <string name="Games">Games</string>
    <string name="Keno">Keno</string>
    <string name="Poker">Poker</string>
    <string name="Lottery">Lottery</string>
    <string name="Roulette">Roulette</string>
    <string name="Casino">Casino</string>
    <string name="Discount">Discount</string>
    <string name="Logout">Logout</string>
    <string name="Edit_information">Edit information</string>
    <string name="Recharge">Recharge</string>
    <string name="Withdrawals">Withdrawals</string>
    <string name="My_order">My order</string>
    <string name="Game_type">Game type</string>
    <string name="Start_time">Start time</string>
    <string name="End_time">End time</string>
    <string name="Today">Today</string>
    <string name="Ball">Ball</string>
    <string name="Early">Early</string>
    <string name="Cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="collection">Collection</string>
    <string name="menu">Menu</string>
    <string name="mix">MIX PARLAY</string>
    <string name="Soccer">Soccer</string>
    <string name="Basketball">Basketball</string>
    <string name="Volleyball">Volleyball</string>
    <string name="Thaithousand">Thaithousand</string>
    <string name="not_started">Not start</string>
    <string name="min">m</string>
    <string name="Total">Total</string>
    <string name="Odds_Type">Odds Type</string>
    <string name="AOS">AOS</string>
    <string name="Matchs">Matchs</string>
    <string name="running">Live</string>
    <string name="not_allowed_to_bet">Not allowed to bet</string>
    <string name="no_records">No records</string>
    <string name="ORDER">ORDER</string>
    <string name="gd_porker">GD Porker</string>
    <string name="abf88_Porker">ABF88 Porker</string>
    <string name="yt_porker">YT Porker</string>
    <string name="p885_porker">885 Porker</string>
    <string name="dig_porker">DIG Porker</string>
    <string name="loading">Loading</string>
    <string name="win">Win</string>
    <string name="draw">Draw</string>
    <string name="odd">@string/ODD</string>
    <string name="even">Even</string>
    <string name="double_chance">Double Chance</string>
    <string name="x1">X1</string>
    <string name="x2">2X</string>
    <string name="x12">12</string>
    <string name="half_full_time">HALF TIME/FULL TIME</string>
    <string name="first_last_goal">First Goal/Last Goal</string>
    <string name="total_goals">Total Goal</string>
    <string name="correct_full">FT Correct Score</string>
    <string name="correct_half">FH Correct Score</string>
    <string name="first_goal">First Goal</string>
    <string name="last_goal">Last Goal</string>
    <string name="no_goal">No Goal</string>
    <string name="under">U</string>
    <string name="over">O</string>
    <string name="Input_the_amount_of_bets_please">Input the amount of bets please</string>
    <string name="invalid_amount_bet">Invalid amount bet</string>
    <string name="full_time">FT</string>
    <string name="half_time">FH</string>
    <string name="odd_even">Odd/Even</string>
    <string name="bet_amount">Amount</string>
    <string name="betting_amount">Bet Amount</string>
    <string name="max_bet">Max Bet:</string>
    <string name="min_bet">Min Bet:</string>
    <string name="bet">BET</string>
    <string name="bet1">BET</string>
    <string name="betting_terms">Betting terms:</string>
    <string name="delete">Delete</string>
    <string name="cancel">CANCEL</string>
    <string name="football">Football</string>
    <string name="odds">Odds</string>
    <string name="input_bet_amount_please">Input bet amount please</string>
    <string name="clearance_should_be_more_than_three">Mix parlay should be more than two</string>
    <string name="bet_failed">Bet failed</string>
    <string name="bet_succeed">Bet succeed</string>
    <string name="confirm_or_not">Sure?</string>
    <string name="do_you_bet_again">Bet again?</string>
    <string name="sure">SURE</string>
    <string name="Thai_word">Thai word</string>
    <string name="Thai_game1">1D Game</string>
    <string name="Thai_game2">2D Game</string>
    <string name="Thai_game3">3D Game</string>
    <string name="Thai_bet_hint">Bet successful. Please go to stake placed to check bet.</string>
    <string name="Tennis">Tennis</string>
    <string name="Muay_Thai">MUAY THAI</string>
    <string name="HK_ODDS">HK</string>
    <string name="MY_ODDS">MY</string>
    <string name="ID_ODDS">ID</string>
    <string name="EU_ODDS">EU</string>
    <string name="Financial">Financial</string>
    <string name="Back">Back</string>
    <string name="not_settled">Not Settled</string>
    <string name="settled">Settled</string>
    <string name="scaleplate_asianplate">  Scaleplate/Asianplate  </string>
    <string name="half_full_court_single_double">  Half_Full_Court/Single_Double  </string>
    <string name="correct_score">Correct Score</string>
    <string name="h1">1</string>
    <string name="dx">X</string>
    <string name="a2">2</string>
    <string name="against">Against</string>
    <string name="hh">HH</string>
    <string name="hd">HD</string>
    <string name="ha">HA</string>
    <string name="dh">DH</string>
    <string name="dd">DD</string>
    <string name="da">DA</string>
    <string name="ah">AH</string>
    <string name="ad">AD</string>
    <string name="aa">AA</string>
    <string name="Modify_Avatar">Modify Avatar</string>
    <string name="encounter">Encounter</string>
    <string name="home_and_away">Home And Away</string>
    <string name="single_double">Single/Double</string>
    <string name="check_empty_password">Please enter a password</string>
    <string name="check_length_password">Password must be eight alphanumeric characters</string>
    <string name="check_same_password">Please enter the same password</string>
    <string name="check_old_password">The old password mistake</string>
    <string name="statement">Statement</string>
    <string name="stake">Stake</string>
    <string name="change_password">Modify password</string>
    <string name="transfer">Transfer</string>
    <string name="cash_out">Cash Out</string>
    <string name="event">Event</string>
    <string name="detail">Detail</string>
    <string name="other">OTHERS</string>
    <string name="Choose">Choose Matches</string>
    <string name="Common_Game">Common Game</string>
    <string name="E_Sport">E-Sports</string>
    <string name="Specials_4D">4D Specials</string>
    <string name="OutRight">OutRight</string>
    <string name="MixParlay">MixParlay</string>
    <string name="selected_all">Selected All</string>
    <string name="reverse_selection">Reverse Selection</string>
    <string name="Huay_Thai">HUAY THAI</string>
    <string name="Myanmar_Odds">Myanmar Odds</string>
    <string name="HANDICAP">HDP</string>
    <string name="OVER_UNDER">O/U</string>
    <string name="TO_WIN">TO WIN</string>
    <string name="ODD_EVEN">ODD/EVEN</string>
    <string name="another_login">You are already logged in another place!</string>
    <string name="date">Date</string>
    <string name="six_day">6 days</string>
    <string name="all">All</string>
    <string name="statement_stake">Stake</string>
    <string name="valid_amount">Valid Amount</string>
    <string name="w_l">W/L</string>
    <string name="commission">Com</string>
    <string name="settled_statement">Settled</string>
    <string name="balances">Balance</string>
    <string name="confirm_balance">Please confirm your balances</string>
    <string name="transfer_log">Transfer Log</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="total_amount">Total_Amount</string>
    <string name="event_statement">Event</string>
    <string name="stake_statement">Stake</string>
    <string name="number">Number:</string>
    <string name="date_m">Date:</string>
    <string name="event_statement_m">Event:</string>
    <string name="stake_m">Stake:</string>
    <string name="amount_m">Amount:</string>
    <string name="valid_amount_m">Valid Amount:</string>
    <string name="w_l_m">W/L:</string>
    <string name="commission_m">Com:</string>
    <string name="already_determine_the_balance">Already Determine the balances</string>
    <string name="double_click_exit_application">Double click exit application</string>
    <string name="choice_language">Choose Language</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="thai">Thai</string>
    <string name="gd88">GD88</string>
    <string name="gdc">GDC</string>
    <string name="Login_Success">Login Success</string>
    <string name="home">Home</string>
    <string name="center">Center</string>
    <string name="username_m">Name:</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="login_name">Login Name</string>
    <string name="currency">Currency</string>
    <string name="cash_balance">Cash Balance</string>
    <string name="outstanding">Outstanding</string>
    <string name="given_credit">Given Credit</string>
    <string name="bet_credit">Bet Credit</string>
    <string name="min_bet_m">Min Bet</string>
    <string name="total_balance">Total Balance</string>
    <string name="sportbook_balance">Sportbook Balance</string>
    <string name="transfer_E_Games">Transfer E-Games</string>
    <string name="blance_E_Games">E-Games Balance</string>
    <string name="transfer_GD_Casino">Transfer GD Casino</string>
    <string name="blance_GD_Casino">GD Casino Balance</string>
    <string name="transfer_855_Casino">Transfer 855 Casino</string>
    <string name="blance_855_Casino">855 Casino Balance</string>
    <string name="transfer_W88_Casino">Transfer W88 Casino</string>
    <string name="blance_W88_Casino">W88 Casino Balance</string>
    <string name="Input_the_amount_please">Input the amount please</string>
    <string name="money_not_enough">balances not enough</string>
    <string name="login_out">Are You Sure Logout</string>
    <string name="enter_username_or_password">Please enter the user name or password</string>
    <string name="grade_m">Result:</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="Login_Failed">Login failed</string>
    <string name="upload_files">Upload files</string>
    <string name="All_Markets">All</string>
    <string name="hot_sort">Normal Sorting</string>
    <string name="WAITING2">WAITING</string>
    <string name="ACCEPTED2">ACCEPTED</string>
    <string name="REJECTED2">REJECTED</string>
    <string name="CANCELLED2">CANCELLED</string>
    <string name="Note">Note</string>
    <string name="quick_bet_amount">Quick SINGLE BET AMT</string>
    <string name="deposit">Deposit</string>
    <string name="auto_deposit">Auto Deposit</string>
    <string name="deposit_history">Deposit History</string>
</resources>