<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vs_row_head_ll"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_thick_line"
            />
        <TextView
            android:id="@+id/vs_header_module_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:padding="5dp"
            android:text="@string/home_and_away"
            android:gravity="center"/>
        <LinearLayout
            android:id="@+id/vs_row_head_second_ll"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/vs_header_left_title_tv"
                android:gravity="center"
                android:textSize="10sp"
               android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black_grey"
                android:text="@string/encounter"/>
            <TextView
                android:id="@+id/vs_header_center_title_tv"
                android:textSize="10sp"
                android:gravity="center"
                android:textColor="@color/black_grey"
               android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/full_time"/>
            <TextView
                android:id="@+id/vs_header_right_title_tv"
                android:textSize="10sp"
                android:textColor="@color/black_grey"
                android:gravity="center"
               android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/half_time"/>
            </LinearLayout>
</LinearLayout>