<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:gravity="center"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/choose_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_dark"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/Password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />
    <EditText

        android:inputType="textPassword"
        android:id="@+id/choose_new_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/grey_light"
        android:hint="@string/new_password"
        android:background="@drawable/rectangle_white_stroke_grey_corner5"

        android:padding="5dp"
        android:textColor="@color/black_grey"
        android:textSize="14sp" />
    <TextView
        android:visibility="gone"
        android:id="@+id/tip_new_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        android:layout_marginStart="5dp"
        android:text="@string/quick_bet_amount"
        android:textColor="@color/red"
        android:textSize="12sp" />
    <EditText
        android:textColorHint="@color/grey_light"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:id="@+id/choose_message_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rectangle_white_stroke_grey_corner5"

        android:padding="5dp"
        android:textColor="@color/black_grey"
        android:textSize="14sp" />
    <TextView
        android:visibility="gone"
        android:id="@+id/tip_repeat_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        android:layout_marginStart="5dp"
        android:text="@string/quick_bet_amount"
        android:textColor="@color/red"
        android:textSize="12sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/choose_cancel_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Back"
            android:layout_margin="5dp"
            android:background="@color/yellow_button"
            android:textColor="@color/white" />

        <View
            android:id="@+id/line_center"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/grey_light" />

        <TextView
            android:id="@+id/choose_sure_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/OK"
            android:layout_margin="5dp"
            android:background="@color/green_light_bg"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
