<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light_white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_game_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableBottom="@drawable/line_white"
            android:drawablePadding="5dp"
            android:drawableRight="@mipmap/arrow_down_drop_white"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/Soccer"
            android:textColor="@color/green900"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_game_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:drawableBottom="@drawable/line_white"
            android:drawablePadding="5dp"
            android:drawableRight="@mipmap/arrow_down_drop_white"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="12/06/2017"
            android:textColor="@color/green900"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_market"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableBottom="@drawable/line_white"
            android:drawablePadding="5dp"
            android:drawableRight="@mipmap/arrow_down_drop_white"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/All_Markets"
            android:textColor="@color/green900"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableBottom="@drawable/line_white"
            android:drawablePadding="5dp"
            android:drawableRight="@mipmap/arrow_down_drop_white"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/hot_sort"
            android:textColor="@color/green900"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_module_itle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableBottom="@drawable/line_white"
            android:drawablePadding="5dp"
            android:drawableRight="@mipmap/arrow_down_drop_white"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/all"
            android:textColor="@color/green900"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/tv_submit"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
                android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:background="@drawable/rectangle_green_allradius2"
            android:text="@string/Submit"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/style_match_wrap"
        android:background="#1F5E1F"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/text_match_black10"
            android:layout_width="0dp"
            android:layout_marginLeft="7dp"
            android:layout_weight="0.8"
            android:gravity="center|left"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:text="@string/date"
            android:textColor="#000000"
            android:textSize="9sp" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="30dp"
            android:background="@color/green_light" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="30dp"
            android:background="@color/default_fill_color" />

        <TextView
            style="@style/text_match_black10"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/event_statement"
            android:textColor="#000000"
            android:textSize="9sp" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="30dp"
            android:background="@color/green_light" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="30dp"
            android:background="@color/default_fill_color" />

        <TextView
            style="@style/text_match_black10"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/stake_statement"
            android:textColor="#000000"
            android:textSize="9sp" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="30dp"
            android:background="@color/green_light" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="30dp"
            android:background="@color/default_fill_color" />

        <TextView
            style="@style/text_match_black10"
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:gravity="center"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/amount"
            android:textColor="#000000"
            android:textSize="9sp" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="30dp"
            android:background="@color/green_light" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="30dp"
            android:background="@color/default_fill_color" />

        <TextView
            style="@style/text_match_black10"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/commission"
            android:textColor="#000000"
            android:textSize="9sp" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="30dp"
            android:background="@color/green_light" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="30dp"
            android:background="@color/default_fill_color" />
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

    />


</LinearLayout>